# DPG

./: README.md  pyproject.toml
src/dpg/: __init__.py  copdaq.ipynb  implementation.ipynb
